InterpretadorLua/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On ID shift to state 1
-- On separated_nonempty_list(VIRG,ID) shift to state 4
-- On programa shift to state 31
-- On list(declaracao_de_variavel) shift to state 32
-- On declaracao_de_variavel shift to state 153
-- On INICIO reduce production list(declaracao_de_variavel) -> 
-- On FUNCAO reduce production list(declaracao_de_variavel) -> 

State 1:
separated_nonempty_list(VIRG,ID) -> ID . [ DPTOS ]
separated_nonempty_list(VIRG,ID) -> ID . VIRG separated_nonempty_list(VIRG,ID) [ DPTOS ]
-- On VIRG shift to state 2
-- On DPTOS reduce production separated_nonempty_list(VIRG,ID) -> ID 

State 2:
separated_nonempty_list(VIRG,ID) -> ID VIRG . separated_nonempty_list(VIRG,ID) [ DPTOS ]
-- On ID shift to state 1
-- On separated_nonempty_list(VIRG,ID) shift to state 3

State 3:
separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) . [ DPTOS ]
-- On DPTOS reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 

State 4:
declaracao_de_variavel -> separated_nonempty_list(VIRG,ID) . DPTOS tipo [ INICIO ID FUNCAO ]
-- On DPTOS shift to state 5

State 5:
declaracao_de_variavel -> separated_nonempty_list(VIRG,ID) DPTOS . tipo [ INICIO ID FUNCAO ]
-- On REGISTRO shift to state 6
-- On PFLUTUANTE shift to state 9
-- On INTEIRO shift to state 10
-- On CADEIA shift to state 11
-- On BOOLEANO shift to state 12
-- On ARRANJO shift to state 13
-- On tipo_simples shift to state 21
-- On tipo_registro shift to state 22
-- On tipo_arranjo shift to state 23
-- On tipo shift to state 30

State 6:
tipo_registro -> REGISTRO . nonempty_list(__anonymous_0) FIM REGISTRO [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On ID shift to state 7
-- On nonempty_list(__anonymous_0) shift to state 27

State 7:
nonempty_list(__anonymous_0) -> ID . DPTOS tipo [ FIM ]
nonempty_list(__anonymous_0) -> ID . DPTOS tipo nonempty_list(__anonymous_0) [ FIM ]
-- On DPTOS shift to state 8

State 8:
nonempty_list(__anonymous_0) -> ID DPTOS . tipo [ FIM ]
nonempty_list(__anonymous_0) -> ID DPTOS . tipo nonempty_list(__anonymous_0) [ FIM ]
-- On REGISTRO shift to state 6
-- On PFLUTUANTE shift to state 9
-- On INTEIRO shift to state 10
-- On CADEIA shift to state 11
-- On BOOLEANO shift to state 12
-- On ARRANJO shift to state 13
-- On tipo_simples shift to state 21
-- On tipo_registro shift to state 22
-- On tipo_arranjo shift to state 23
-- On tipo shift to state 25

State 9:
tipo_simples -> PFLUTUANTE . [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On VIRG reduce production tipo_simples -> PFLUTUANTE 
-- On INICIO reduce production tipo_simples -> PFLUTUANTE 
-- On ID reduce production tipo_simples -> PFLUTUANTE 
-- On FUNCAO reduce production tipo_simples -> PFLUTUANTE 
-- On FPAR reduce production tipo_simples -> PFLUTUANTE 
-- On FIM reduce production tipo_simples -> PFLUTUANTE 

State 10:
tipo_simples -> INTEIRO . [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On VIRG reduce production tipo_simples -> INTEIRO 
-- On INICIO reduce production tipo_simples -> INTEIRO 
-- On ID reduce production tipo_simples -> INTEIRO 
-- On FUNCAO reduce production tipo_simples -> INTEIRO 
-- On FPAR reduce production tipo_simples -> INTEIRO 
-- On FIM reduce production tipo_simples -> INTEIRO 

State 11:
tipo_simples -> CADEIA . [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On VIRG reduce production tipo_simples -> CADEIA 
-- On INICIO reduce production tipo_simples -> CADEIA 
-- On ID reduce production tipo_simples -> CADEIA 
-- On FUNCAO reduce production tipo_simples -> CADEIA 
-- On FPAR reduce production tipo_simples -> CADEIA 
-- On FIM reduce production tipo_simples -> CADEIA 

State 12:
tipo_simples -> BOOLEANO . [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On VIRG reduce production tipo_simples -> BOOLEANO 
-- On INICIO reduce production tipo_simples -> BOOLEANO 
-- On ID reduce production tipo_simples -> BOOLEANO 
-- On FUNCAO reduce production tipo_simples -> BOOLEANO 
-- On FPAR reduce production tipo_simples -> BOOLEANO 
-- On FIM reduce production tipo_simples -> BOOLEANO 

State 13:
tipo_arranjo -> ARRANJO . ACOL limites FCOL DE tipo [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On ACOL shift to state 14

State 14:
tipo_arranjo -> ARRANJO ACOL . limites FCOL DE tipo [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On INT shift to state 15
-- On limites shift to state 18

State 15:
limites -> INT . PPTO INT [ FCOL ]
-- On PPTO shift to state 16

State 16:
limites -> INT PPTO . INT [ FCOL ]
-- On INT shift to state 17

State 17:
limites -> INT PPTO INT . [ FCOL ]
-- On FCOL reduce production limites -> INT PPTO INT 

State 18:
tipo_arranjo -> ARRANJO ACOL limites . FCOL DE tipo [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On FCOL shift to state 19

State 19:
tipo_arranjo -> ARRANJO ACOL limites FCOL . DE tipo [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On DE shift to state 20

State 20:
tipo_arranjo -> ARRANJO ACOL limites FCOL DE . tipo [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On REGISTRO shift to state 6
-- On PFLUTUANTE shift to state 9
-- On INTEIRO shift to state 10
-- On CADEIA shift to state 11
-- On BOOLEANO shift to state 12
-- On ARRANJO shift to state 13
-- On tipo_simples shift to state 21
-- On tipo_registro shift to state 22
-- On tipo_arranjo shift to state 23
-- On tipo shift to state 24

State 21:
tipo -> tipo_simples . [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On VIRG reduce production tipo -> tipo_simples 
-- On INICIO reduce production tipo -> tipo_simples 
-- On ID reduce production tipo -> tipo_simples 
-- On FUNCAO reduce production tipo -> tipo_simples 
-- On FPAR reduce production tipo -> tipo_simples 
-- On FIM reduce production tipo -> tipo_simples 

State 22:
tipo -> tipo_registro . [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On VIRG reduce production tipo -> tipo_registro 
-- On INICIO reduce production tipo -> tipo_registro 
-- On ID reduce production tipo -> tipo_registro 
-- On FUNCAO reduce production tipo -> tipo_registro 
-- On FPAR reduce production tipo -> tipo_registro 
-- On FIM reduce production tipo -> tipo_registro 

State 23:
tipo -> tipo_arranjo . [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On VIRG reduce production tipo -> tipo_arranjo 
-- On INICIO reduce production tipo -> tipo_arranjo 
-- On ID reduce production tipo -> tipo_arranjo 
-- On FUNCAO reduce production tipo -> tipo_arranjo 
-- On FPAR reduce production tipo -> tipo_arranjo 
-- On FIM reduce production tipo -> tipo_arranjo 

State 24:
tipo_arranjo -> ARRANJO ACOL limites FCOL DE tipo . [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On VIRG reduce production tipo_arranjo -> ARRANJO ACOL limites FCOL DE tipo 
-- On INICIO reduce production tipo_arranjo -> ARRANJO ACOL limites FCOL DE tipo 
-- On ID reduce production tipo_arranjo -> ARRANJO ACOL limites FCOL DE tipo 
-- On FUNCAO reduce production tipo_arranjo -> ARRANJO ACOL limites FCOL DE tipo 
-- On FPAR reduce production tipo_arranjo -> ARRANJO ACOL limites FCOL DE tipo 
-- On FIM reduce production tipo_arranjo -> ARRANJO ACOL limites FCOL DE tipo 

State 25:
nonempty_list(__anonymous_0) -> ID DPTOS tipo . [ FIM ]
nonempty_list(__anonymous_0) -> ID DPTOS tipo . nonempty_list(__anonymous_0) [ FIM ]
-- On ID shift to state 7
-- On nonempty_list(__anonymous_0) shift to state 26
-- On FIM reduce production nonempty_list(__anonymous_0) -> ID DPTOS tipo 

State 26:
nonempty_list(__anonymous_0) -> ID DPTOS tipo nonempty_list(__anonymous_0) . [ FIM ]
-- On FIM reduce production nonempty_list(__anonymous_0) -> ID DPTOS tipo nonempty_list(__anonymous_0) 

State 27:
tipo_registro -> REGISTRO nonempty_list(__anonymous_0) . FIM REGISTRO [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On FIM shift to state 28

State 28:
tipo_registro -> REGISTRO nonempty_list(__anonymous_0) FIM . REGISTRO [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On REGISTRO shift to state 29

State 29:
tipo_registro -> REGISTRO nonempty_list(__anonymous_0) FIM REGISTRO . [ VIRG INICIO ID FUNCAO FPAR FIM ]
-- On VIRG reduce production tipo_registro -> REGISTRO nonempty_list(__anonymous_0) FIM REGISTRO 
-- On INICIO reduce production tipo_registro -> REGISTRO nonempty_list(__anonymous_0) FIM REGISTRO 
-- On ID reduce production tipo_registro -> REGISTRO nonempty_list(__anonymous_0) FIM REGISTRO 
-- On FUNCAO reduce production tipo_registro -> REGISTRO nonempty_list(__anonymous_0) FIM REGISTRO 
-- On FPAR reduce production tipo_registro -> REGISTRO nonempty_list(__anonymous_0) FIM REGISTRO 
-- On FIM reduce production tipo_registro -> REGISTRO nonempty_list(__anonymous_0) FIM REGISTRO 

State 30:
declaracao_de_variavel -> separated_nonempty_list(VIRG,ID) DPTOS tipo . [ INICIO ID FUNCAO ]
-- On INICIO reduce production declaracao_de_variavel -> separated_nonempty_list(VIRG,ID) DPTOS tipo 
-- On ID reduce production declaracao_de_variavel -> separated_nonempty_list(VIRG,ID) DPTOS tipo 
-- On FUNCAO reduce production declaracao_de_variavel -> separated_nonempty_list(VIRG,ID) DPTOS tipo 

State 31:
programa' -> programa . [ # ]
-- On # accept programa

State 32:
programa -> list(declaracao_de_variavel) . list(declaracao_de_funcao) INICIO list(comando) FIM EOF [ # ]
-- On FUNCAO shift to state 33
-- On list(declaracao_de_funcao) shift to state 155
-- On declaracao_de_funcao shift to state 160
-- On INICIO reduce production list(declaracao_de_funcao) -> 

State 33:
declaracao_de_funcao -> FUNCAO . ID APAR loption(separated_nonempty_list(VIRG,parametro)) FPAR DPTOS tipo list(declaracao_de_variavel) INICIO list(comando) FIM [ INICIO FUNCAO ]
-- On ID shift to state 34

State 34:
declaracao_de_funcao -> FUNCAO ID . APAR loption(separated_nonempty_list(VIRG,parametro)) FPAR DPTOS tipo list(declaracao_de_variavel) INICIO list(comando) FIM [ INICIO FUNCAO ]
-- On APAR shift to state 35

State 35:
declaracao_de_funcao -> FUNCAO ID APAR . loption(separated_nonempty_list(VIRG,parametro)) FPAR DPTOS tipo list(declaracao_de_variavel) INICIO list(comando) FIM [ INICIO FUNCAO ]
-- On ID shift to state 36
-- On separated_nonempty_list(VIRG,parametro) shift to state 39
-- On parametro shift to state 40
-- On loption(separated_nonempty_list(VIRG,parametro)) shift to state 43
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,parametro)) -> 

State 36:
parametro -> ID . DPTOS tipo [ VIRG FPAR ]
-- On DPTOS shift to state 37

State 37:
parametro -> ID DPTOS . tipo [ VIRG FPAR ]
-- On REGISTRO shift to state 6
-- On PFLUTUANTE shift to state 9
-- On INTEIRO shift to state 10
-- On CADEIA shift to state 11
-- On BOOLEANO shift to state 12
-- On ARRANJO shift to state 13
-- On tipo_simples shift to state 21
-- On tipo_registro shift to state 22
-- On tipo_arranjo shift to state 23
-- On tipo shift to state 38

State 38:
parametro -> ID DPTOS tipo . [ VIRG FPAR ]
-- On VIRG reduce production parametro -> ID DPTOS tipo 
-- On FPAR reduce production parametro -> ID DPTOS tipo 

State 39:
loption(separated_nonempty_list(VIRG,parametro)) -> separated_nonempty_list(VIRG,parametro) . [ FPAR ]
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,parametro)) -> separated_nonempty_list(VIRG,parametro) 

State 40:
separated_nonempty_list(VIRG,parametro) -> parametro . [ FPAR ]
separated_nonempty_list(VIRG,parametro) -> parametro . VIRG separated_nonempty_list(VIRG,parametro) [ FPAR ]
-- On VIRG shift to state 41
-- On FPAR reduce production separated_nonempty_list(VIRG,parametro) -> parametro 

State 41:
separated_nonempty_list(VIRG,parametro) -> parametro VIRG . separated_nonempty_list(VIRG,parametro) [ FPAR ]
-- On ID shift to state 36
-- On separated_nonempty_list(VIRG,parametro) shift to state 42
-- On parametro shift to state 40

State 42:
separated_nonempty_list(VIRG,parametro) -> parametro VIRG separated_nonempty_list(VIRG,parametro) . [ FPAR ]
-- On FPAR reduce production separated_nonempty_list(VIRG,parametro) -> parametro VIRG separated_nonempty_list(VIRG,parametro) 

State 43:
declaracao_de_funcao -> FUNCAO ID APAR loption(separated_nonempty_list(VIRG,parametro)) . FPAR DPTOS tipo list(declaracao_de_variavel) INICIO list(comando) FIM [ INICIO FUNCAO ]
-- On FPAR shift to state 44

State 44:
declaracao_de_funcao -> FUNCAO ID APAR loption(separated_nonempty_list(VIRG,parametro)) FPAR . DPTOS tipo list(declaracao_de_variavel) INICIO list(comando) FIM [ INICIO FUNCAO ]
-- On DPTOS shift to state 45

State 45:
declaracao_de_funcao -> FUNCAO ID APAR loption(separated_nonempty_list(VIRG,parametro)) FPAR DPTOS . tipo list(declaracao_de_variavel) INICIO list(comando) FIM [ INICIO FUNCAO ]
-- On REGISTRO shift to state 6
-- On PFLUTUANTE shift to state 9
-- On INTEIRO shift to state 10
-- On CADEIA shift to state 11
-- On BOOLEANO shift to state 12
-- On ARRANJO shift to state 13
-- On tipo_simples shift to state 21
-- On tipo_registro shift to state 22
-- On tipo_arranjo shift to state 23
-- On tipo shift to state 46

State 46:
declaracao_de_funcao -> FUNCAO ID APAR loption(separated_nonempty_list(VIRG,parametro)) FPAR DPTOS tipo . list(declaracao_de_variavel) INICIO list(comando) FIM [ INICIO FUNCAO ]
-- On ID shift to state 1
-- On separated_nonempty_list(VIRG,ID) shift to state 4
-- On list(declaracao_de_variavel) shift to state 47
-- On declaracao_de_variavel shift to state 153
-- On INICIO reduce production list(declaracao_de_variavel) -> 

State 47:
declaracao_de_funcao -> FUNCAO ID APAR loption(separated_nonempty_list(VIRG,parametro)) FPAR DPTOS tipo list(declaracao_de_variavel) . INICIO list(comando) FIM [ INICIO FUNCAO ]
-- On INICIO shift to state 48

State 48:
declaracao_de_funcao -> FUNCAO ID APAR loption(separated_nonempty_list(VIRG,parametro)) FPAR DPTOS tipo list(declaracao_de_variavel) INICIO . list(comando) FIM [ INICIO FUNCAO ]
-- On WHILE shift to state 49
-- On STRING shift to state 51
-- On SE shift to state 102
-- On SAIDA shift to state 107
-- On RETORNE shift to state 111
-- On INT shift to state 52
-- On ID shift to state 53
-- On FOR shift to state 114
-- On FLOAT shift to state 55
-- On BOOL shift to state 56
-- On APAR shift to state 57
-- On variavel shift to state 58
-- On separated_nonempty_list(VIRG,expressao) shift to state 124
-- On list(comando) shift to state 151
-- On expressao shift to state 128
-- On comando_se shift to state 131
-- On comando_saida shift to state 132
-- On comando_retorno shift to state 133
-- On comando_para shift to state 134
-- On comando_entrada shift to state 135
-- On comando_enquanto shift to state 136
-- On comando_chamada shift to state 137
-- On comando_atribuicao shift to state 138
-- On comando shift to state 139
-- On chamada shift to state 141
-- On FIM reduce production list(comando) -> 

State 49:
comando_enquanto -> WHILE . APAR expressao FPAR DO list(comando) FIM [ WHILE STRING SENAO SE SAIDA RETORNE INT ID FOR FLOAT FIM BOOL APAR ]
-- On APAR shift to state 50

State 50:
comando_enquanto -> WHILE APAR . expressao FPAR DO list(comando) FIM [ WHILE STRING SENAO SE SAIDA RETORNE INT ID FOR FLOAT FIM BOOL APAR ]
-- On STRING shift to state 51
-- On INT shift to state 52
-- On ID shift to state 53
-- On FLOAT shift to state 55
-- On BOOL shift to state 56
-- On APAR shift to state 57
-- On variavel shift to state 58
-- On expressao shift to state 99
-- On chamada shift to state 79

State 51:
expressao -> STRING . [ WHILE VIRG STRING SENAO SE SAIDA RETORNE PASSO OULOG MULT MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR INT IGUAL ID FPAR FOR FLOAT FIM FCOL ENTRADA ELOG DIV DIFER CONCAT BOOL ATRIB APAR ]
-- On WHILE reduce production expressao -> STRING 
-- On VIRG reduce production expressao -> STRING 
-- On STRING reduce production expressao -> STRING 
-- On SENAO reduce production expressao -> STRING 
-- On SE reduce production expressao -> STRING 
-- On SAIDA reduce production expressao -> STRING 
-- On RETORNE reduce production expressao -> STRING 
-- On PASSO reduce production expressao -> STRING 
-- On OULOG reduce production expressao -> STRING 
-- On MULT reduce production expressao -> STRING 
-- On MENOS reduce production expressao -> STRING 
-- On MENORIGUAL reduce production expressao -> STRING 
-- On MENOR reduce production expressao -> STRING 
-- On MAIS reduce production expressao -> STRING 
-- On MAIORIGUAL reduce production expressao -> STRING 
-- On MAIOR reduce production expressao -> STRING 
-- On INT reduce production expressao -> STRING 
-- On IGUAL reduce production expressao -> STRING 
-- On ID reduce production expressao -> STRING 
-- On FPAR reduce production expressao -> STRING 
-- On FOR reduce production expressao -> STRING 
-- On FLOAT reduce production expressao -> STRING 
-- On FIM reduce production expressao -> STRING 
-- On FCOL reduce production expressao -> STRING 
-- On ENTRADA reduce production expressao -> STRING 
-- On ELOG reduce production expressao -> STRING 
-- On DIV reduce production expressao -> STRING 
-- On DIFER reduce production expressao -> STRING 
-- On CONCAT reduce production expressao -> STRING 
-- On BOOL reduce production expressao -> STRING 
-- On ATRIB reduce production expressao -> STRING 
-- On APAR reduce production expressao -> STRING 

State 52:
expressao -> INT . [ WHILE VIRG STRING SENAO SE SAIDA RETORNE PASSO OULOG MULT MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR INT IGUAL ID FPAR FOR FLOAT FIM FCOL ENTRADA ELOG DIV DIFER CONCAT BOOL ATRIB APAR ]
-- On WHILE reduce production expressao -> INT 
-- On VIRG reduce production expressao -> INT 
-- On STRING reduce production expressao -> INT 
-- On SENAO reduce production expressao -> INT 
-- On SE reduce production expressao -> INT 
-- On SAIDA reduce production expressao -> INT 
-- On RETORNE reduce production expressao -> INT 
-- On PASSO reduce production expressao -> INT 
-- On OULOG reduce production expressao -> INT 
-- On MULT reduce production expressao -> INT 
-- On MENOS reduce production expressao -> INT 
-- On MENORIGUAL reduce production expressao -> INT 
-- On MENOR reduce production expressao -> INT 
-- On MAIS reduce production expressao -> INT 
-- On MAIORIGUAL reduce production expressao -> INT 
-- On MAIOR reduce production expressao -> INT 
-- On INT reduce production expressao -> INT 
-- On IGUAL reduce production expressao -> INT 
-- On ID reduce production expressao -> INT 
-- On FPAR reduce production expressao -> INT 
-- On FOR reduce production expressao -> INT 
-- On FLOAT reduce production expressao -> INT 
-- On FIM reduce production expressao -> INT 
-- On FCOL reduce production expressao -> INT 
-- On ENTRADA reduce production expressao -> INT 
-- On ELOG reduce production expressao -> INT 
-- On DIV reduce production expressao -> INT 
-- On DIFER reduce production expressao -> INT 
-- On CONCAT reduce production expressao -> INT 
-- On BOOL reduce production expressao -> INT 
-- On ATRIB reduce production expressao -> INT 
-- On APAR reduce production expressao -> INT 

State 53:
chamada -> ID . APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR [ WHILE VIRG STRING SENAO SE SAIDA RETORNE PASSO OULOG MULT MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR INT IGUAL ID FPAR FOR FLOAT FIM FCOL ENTRADA ELOG DIV DIFER CONCAT BOOL ATRIB APAR ]
variavel -> ID . [ WHILE VIRG STRING SENAO SE SAIDA RETORNE PTO PASSO OULOG MULT MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR INT IGUAL ID FPAR FOR FLOAT FIM FCOL ENTRADA ELOG DIV DIFER CONCAT BOOL ATRIB APAR ACOL ]
-- On APAR shift to state 54
-- On WHILE reduce production variavel -> ID 
-- On VIRG reduce production variavel -> ID 
-- On STRING reduce production variavel -> ID 
-- On SENAO reduce production variavel -> ID 
-- On SE reduce production variavel -> ID 
-- On SAIDA reduce production variavel -> ID 
-- On RETORNE reduce production variavel -> ID 
-- On PTO reduce production variavel -> ID 
-- On PASSO reduce production variavel -> ID 
-- On OULOG reduce production variavel -> ID 
-- On MULT reduce production variavel -> ID 
-- On MENOS reduce production variavel -> ID 
-- On MENORIGUAL reduce production variavel -> ID 
-- On MENOR reduce production variavel -> ID 
-- On MAIS reduce production variavel -> ID 
-- On MAIORIGUAL reduce production variavel -> ID 
-- On MAIOR reduce production variavel -> ID 
-- On INT reduce production variavel -> ID 
-- On IGUAL reduce production variavel -> ID 
-- On ID reduce production variavel -> ID 
-- On FPAR reduce production variavel -> ID 
-- On FOR reduce production variavel -> ID 
-- On FLOAT reduce production variavel -> ID 
-- On FIM reduce production variavel -> ID 
-- On FCOL reduce production variavel -> ID 
-- On ENTRADA reduce production variavel -> ID 
-- On ELOG reduce production variavel -> ID 
-- On DIV reduce production variavel -> ID 
-- On DIFER reduce production variavel -> ID 
-- On CONCAT reduce production variavel -> ID 
-- On BOOL reduce production variavel -> ID 
-- On ATRIB reduce production variavel -> ID 
-- On APAR reduce production variavel -> ID 
-- On ACOL reduce production variavel -> ID 
** Conflict on APAR

State 54:
chamada -> ID APAR . loption(separated_nonempty_list(VIRG,expressao)) FPAR [ WHILE VIRG STRING SENAO SE SAIDA RETORNE PASSO OULOG MULT MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR INT IGUAL ID FPAR FOR FLOAT FIM FCOL ENTRADA ELOG DIV DIFER CONCAT BOOL ATRIB APAR ]
-- On STRING shift to state 51
-- On INT shift to state 52
-- On ID shift to state 53
-- On FLOAT shift to state 55
-- On BOOL shift to state 56
-- On APAR shift to state 57
-- On variavel shift to state 58
-- On separated_nonempty_list(VIRG,expressao) shift to state 93
-- On loption(separated_nonempty_list(VIRG,expressao)) shift to state 94
-- On expressao shift to state 96
-- On chamada shift to state 79
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,expressao)) -> 
